# gentlegoose

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/gentlegoose/: __init__.py  cli.py  config_manager.py  file_handler.py  logger.py
tests/: conftest.py  test_config_manager.py  test_file_handler.py
