[project]
name = "gentlegoose"
version = "0.1.0"
description = "Sync global gitignore patterns into Zed editor project settings"
readme = "README.md"
authors = [{ name = "Taylor Monacelli", email = "taylormonacelli@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["dulwich"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
gentlegoose = "gentlegoose:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
preview = true

[tool.ruff.lint]
select = [
  "A",
  "AIR",
  "ARG",
  "ASYNC",
  "ASYNC1",
  "B",
  "C",
  "C4",
  "C90",
  "DJ",
  "DTZ",
  "E",
  "EM",
  "ERA",
  "EXE",
  "F",
  "FA",
  "FBT",
  "FIX",
  "FLY",
  "G",
  "I",
  "ICN",
  "INP",
  "INT",
  "ISC",
  "LOG",
  "N",
  "NPY",
  "PD",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "Q",
  "R",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "SLF",
  "SLOT",
  "T10",
  "T20",
  "TD",
  "TID",
  "TRY",
  "UP",
  "W",
  "YTT",
]
extend-select = ["I"]
extend-safe-fixes = ["F401", "F841"]

# Disable specific rules for tests
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR6301", "SLF001"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--strict-config", "-ra"]
pythonpath = ["src"]
